--- a/Project03_Day 07/style.css
+++ b/Project03_Day 07/style.css
@@ -43,8 +43,9 @@ nav {
 
 #nav-bar ul {
     list-style: none;
-    display: flex;
+    display:flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 #nav-bar ul li a {
@@ -61,15 +62,7 @@ nav {
     color: #231F20;
     font-weight: 400;
     font-size: 16px;
-    margin-top: 14px;
-}
-
-
-.drp-itm {
-    font-family: Arial, Helvetica, sans-serif;
-    color: #231F20;
-    font-weight: 400;
-    line-height: 48px;
+   /* margin-top: 14px; */
 }
 
 #btn {
